master: adding getAll for groups and workers